...
    UixThemeAuto(false) {
        Surface(
            modifier = Modifier
                .recognizerSurfaceClickable(disabled = !allowClick, onPauseVAD = onPauseVAD, onFinish = onFinish)
                .fillMaxWidth()
                .wrapContentHeight()
                .testTag("ime-panel"),
            color = MaterialTheme.colorScheme.surface
        ) {
            Column(Modifier.padding(horizontal = 8.dp, vertical = 4.dp)) {
                ConditionalUnpaidNoticeInVoiceInputWindow(switchBack)
                Row(Modifier.fillMaxWidth().weight(1f, fill = false), verticalAlignment = Alignment.Top) {
                    Column(Modifier.weight(1f)) { content() }
...
